update office hours

--- a/index.adoc
+++ b/index.adoc
@@ -15,10 +15,9 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Welcome to systems programming!
-* Assignment 01 is Posted! link:assts/asst01.html[Assignment 01]: Due January 24
 * Assignment 02 is due Jan 31: link:assts/asst02.html[Assignment 02]: Learn to C 
 * Lab Jan 28: link:studyguide1.html[Worksheet: Study Guide 1]
+* **Next Week** Jam01 (Lab) and Quiz 01 (Thursday in class)
 
 == Course Info
 
@@ -49,7 +48,7 @@ will be introduced at the end of the course.
 | Lecture | Park 337 | Tuesday and Thursday 10:10 AM - 11:30 AM 
 | Lab | Park 231 | Tuesdays 2:40 PM - 4:00 PM 
 | Office Hours - Prof. Aline Normoyle | Park 200B | Tuesdays, 4-5 PM 
-| Office Hours - Tianyun Song | Park 231/Zoom | TBD
+| Office Hours - Tianyun Song | Park 231 | Thursdays, 5-6PM
 
 |===
 
