--- a/assts/asst09.adoc
+++ b/assts/asst09.adoc
@@ -24,7 +24,7 @@ Using the command line
 
 * Open terminal and change your current directory to your assignment repository.
 * Run the command `git fetch upstream`
-* Run the command `git merge upstream/master`
+* Run the command `git merge upstream/main`
 
 Your repository should now contain a new folder named `{ASST}`.
 
