--- a/index.adoc
+++ b/index.adoc
@@ -15,10 +15,10 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Assignment 02 is due Jan 31: link:assts/asst02.html[Assignment 02]: Learn to C 
 * Assignment 03 is due Feb 7: link:assts/asst03.html[Assignment 03]: If you malloc something, set it free
-* Quiz Feb 6: link:studyguide1.html[Worksheet: Study Guide 1]
-* Lab Feb 4: Jam01 
+* Assignment 04 is due Feb 14: link:assts/asst04.html[Assignment 04]: Watch where you point!
+* Quiz Feb 11: link:studyguide1.html[Worksheet: Study Guide 1]
+* Lab Feb 11: link:studyguide2.html[Worksheet: Study Guide 2]
 
 == Course Info
 
